labs/3_policies/resource/ingress-external-ipblock.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-external-ipblock
spec:
  podSelector:
    matchLabels:
      app: external 
  ingress:
  - from:
    - ipBlock:
        # flannel address of node
        # run 'ip addr show' on the node
        cidr: 10.132.0.37/32
    - ipBlock:
        cidr: 10.132.0.38/32
