labs/3_policies/resource/ingress-external.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-external
spec:
  podSelector:
    matchLabels:
      app: external 
  ingress:
  - {}
  policyTypes:
  - Ingress
